apps/nvidia-device-plugin/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nvidia-device-plugin
  labels:
    goldilocks.fairwinds.com/enabled: "true"
